# ballista_delta

./: .gitignore  Cargo.toml  README.md
.github/: dependabot.yml
.github/workflows/: basic.yml  client_executor.yml
examples/: cluster_client.rs  cluster_executor.rs  cluster_scheduler.rs  custom_scheduler.rs  local_read_client.rs  local_standalone.rs  local_write_standalone.rs  s3_cluster_client.rs  s3_cluster_executor.rs  s3_cluster_scheduler.rs  s3_read_client.rs  s3_standalone.rs  standalone.rs
src/: lib.rs  object_store.rs
tests/: local.rs  standalone.rs  store.rs
tests/common/: mod.rs
