[package]
name = "ballista_delta"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]

ballista = "49"
ballista-core = { version = "49", default-features = false }
ballista-executor = { version = "49", default-features = false }
ballista-scheduler = { version = "49", default-features = false }
datafusion = { version = "48" }
datafusion-proto = { version = "48" }
deltalake = { version = "0.27", features = ["datafusion", "s3"] }
log = "0.4"
object_store = { version = "0.12.4", features = ["aws","http"] }
tokio = { version = "1", features = ["full"] }
url = "2"

[dev-dependencies]
env_logger = "0.11"
ctor = { version = "0.5" }
testcontainers-modules = { version = "0.13", features = ["minio"] }
# for some reason aws-config was downgraded in deltatable
aws-config = { version = "1.5", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1.106.0"
walkdir = "2.5.0"